# aws-lambda-graphql-websocket

./: .gitignore  Dockerfile  LICENSE  README.md  Taskfile.yaml  pyproject.toml
api/: graphql_function.py  schema.py  server.py  websocket_function.py
api/templates/: graphiql.html
infra/: Pulumi.yaml  __main__.py
infra/stacks/: Pulumi.dev.yaml
taskfiles/: docker.yaml  python.yaml
