[tool.poetry]
name = "aws-graphql-subscription-example"
description = "GraphQL Subscription over AWS API Gateway"
authors = ["Louis Amon <louis@nuage.studio>"]
license = "Proprietary"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.12"
aws-lambda-powertools = { version = "*", extras = ["parser", "tracer"] }
boto3 = "*"
strawberry-graphql = { version = "*", extras = ["fastapi", "pydantic"] }
mangum = "*"

[tool.poetry.group.dev.dependencies]
# uvicorn[standard] is required to run a websocket server
uvicorn = { version = "*", extras = ["standard"] }
boto3-stubs = { version = "*", extras = ["apigatewaymanagementapi"] }
pylint = "*"
black = "*"
flake8 = "*"
isort = "*"

[tool.poetry.group.infra.dependencies]
pulumi = "*"
pulumi-aws = "*"
pulumi-docker = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
preview = true

[tool.isort]
line_length = 88
profile = "black"
skip_gitignore = true
known_first_party = ["api", "infra"]
